# onnx-mlir

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/Conversion/: CMakeLists.txt
src/Conversion/AISLEToAISMEM/: AISLEToAISMEM.md  CMakeLists.txt  ConvertAISLEToAISMEM.cpp  helper.hpp  patterns.h
src/Conversion/AISLEToAISMEM/Constant/: QConstant.cpp
src/Conversion/AISLEToAISMEM/DMA/: hstack.cpp
src/Conversion/AISLEToAISMEM/Math/: GEMM.cpp  helper.hpp
src/Conversion/AISMEMToAISLLVM/: AISMEMoAISLLVMmd  CMakeLists.txt  ConvertAISMEMToAISLLVM.cpp  ConvertAISMEMToAISLLVM2.cpp  patterns.h
src/Conversion/AISMEMToAISLLVM/Constant/: QConstant.cpp
src/Conversion/AISMEMToAISLLVM/Krnl/: ConvertKrnlToLLVM.cpp  ConvertKrnlToLLVM.hpp  KrnlEntryPoint.cpp  KrnlGlobal.cpp
src/Conversion/AISMEMToLLVM/: AISMEMToLLVM.md  AISMEMToLLVMCommon.hpp  CMakeLists.txt  ConvertAISMEMToLLVM.cpp  patterns.h
src/Conversion/AISMEMToLLVM/Constant/: QConstant.cpp
src/Conversion/AISMEMToLLVM/DMA/: DmaStartOp.cpp  DmaWaitOp.cpp
src/Conversion/AISMEMToLLVM/Func/: FuncToLLVM.cpp  FuncToLLVM.h
src/Conversion/AISMEMToLLVM/Krnl/: ConvertKrnlToLLVM.cpp  ConvertKrnlToLLVM.hpp  KrnlEntryPoint.cpp  KrnlGlobal.cpp
src/Conversion/AISMEMToLLVM/MLIR/: UnrealizedConversionCast.cpp
src/Conversion/AISMEMToLLVM/Math/: GEMM.cpp  helper.hpp
src/Conversion/AISMEMToLLVM/Memref/: AllocOp.cpp
src/Conversion/KrnlToLLVM/: KrnlGlobal.cpp
src/Conversion/ONNXToAISLE/: CMakeLists.txt  ConvertONNXToAISLE.cpp  ONNXToAISLE.md  helper.hpp  patterns.h
src/Conversion/ONNXToAISLE/Math/: GEMM.cpp
(+60 files in other folders)
